--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
             <div id="s1-date">
                 <span id="s1-date-span">date</span>
             </div>
-            <div id="s1-time">
-                <span id="s1-time-span">00:00</span>
-                <span id="s1-time-plag">KR</span>
+            <div id="s1-time-kk">
+                <span id="s1-time-kk-span">00:00</span>
+                <span class="s1-time-plag">(KK)</span>
+            </div>
+            <div id="s1-time-kr">
+                <span id="s1-time-kr-span">00:00</span>
+                <span class="s1-time-plag">(KR)</span>
             </div>
         </div>
 
