--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Jua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Forum&Bodoni+Moda&Gowun+Dodum&family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>kota</title>
 </head>
 <body>
     <div id="main">
-
-        <div id="kota"><h1>Kota</h1></div>
-
-        <div id="s1">
-            <div id="s1-date">
-                <span id="s1-date-span">date</span>
+        <section id="main-s1">
+            <div id="main-s1-howlong">
+                <span>20221117</span>
+                <span>-</span>
+                <span>20221122</span>
             </div>
-            <div id="s1-time-kk">
-                <span id="s1-time-kk-span">00:00</span>
-                <span class="s1-time-plag">(KK)</span>
+            <div id="main-s1-where">
+                <p>KOTA</p>
+                <p>KINABLALU</p>
             </div>
-            <div id="s1-time-kr">
-                <span id="s1-time-kr-span">00:00</span>
-                <span class="s1-time-plag">(KR)</span>
+            <div id="main-s1-thistime">
+                <span id="main-s1-thistime-date">1</span>
+                <span id="main-s1-thistime-day"></span>
+                <span id="main-s1-thistime-time">00:00</span>
             </div>
-        </div>
+        </section>
+        <!--  -->
+        <section id="main-s2">
+            <div>
+                <span id="main-s2-dday">DAY1</span>
+            </div>
+            <div id="main-s2-schadule">from firebase</div>
+        </section>
 
-        <div id="s2">
-            일정
-        </div>
     </div>
 
 
