--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
         </section>
         <!--  -->
         <section id="main-s2">
-            <div>
-                <span id="main-s2-dday">DAY1</span>
+            <div id="main-s2-boxing">
+                <div id="main-s2-dday">
+                    <span id="main-s2-dday-span">DAY1</span>
+                </div>
+                <div id="main-s2-schadule">from firebase</div>
             </div>
-            <div id="main-s2-schadule">from firebase</div>
         </section>
 
     </div>
