--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>kota</title>
 </head>
 <body>
-    <div id="main">
+    <div class="main">
         <section id="main-s1">
             <div id="main-s1-howlong">
                 <span>20221117</span>
@@ -35,6 +35,32 @@
                 <div id="main-s2-schadule">from firebase</div>
             </div>
         </section>
+        <!--  -->
+        <section id="main-s3">
+            <div id="main-s3-boxing">
+                <div id="main-s3-x">▼</div>
+                <div id="main-s3-menus">
+                    <div class="main-s3-menus" id="main-s3-m1">RATE</div>
+                    <div class="main-s3-menus" id="main-s3-m2">CHECK LIST</div>
+                    <div class="main-s3-menus" id="main-s3-m3">DAIRY</div>
+                    <div class="main-s3-menus" id="main-s3-m4">CHAT</div>
+                </div>
+            </div>
+        </section>
+        <!-- <section id="main-login">
+            <div id="main-login-boxing">
+                <div id="main-login-x">▼
+                    <p>choose travler</p>
+                </div>
+                <div id="main-login-menus">
+                    <div class="main-login-menus" id="main-login-1">김도혁</div>
+                    <div class="main-login-menus" id="main-login-2">한강익</div>
+                    <div class="main-login-menus" id="main-login-3">박정진</div>
+                    <div class="main-login-menus" id="main-login-4">김우섭</div>
+                    <div class="main-login-menus" id="main-login-4">백종훈</div>
+                </div>
+            </div>
+        </section> -->
 
     </div>
 
