--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <p>KINABLALU</p>
             </div>
             <div id="main-s1-thistime">
-                <span id="main-s1-thistime-date">1</span>
-                <span id="main-s1-thistime-day"></span>
+                <span id="main-s1-thistime-date">date</span>
+                <span id="main-s1-thistime-day">day</span>
                 <span id="main-s1-thistime-time">00:00</span>
             </div>
         </section>
@@ -36,7 +36,7 @@
             </div>
         </section>
         <!--  -->
-        <section id="main-s3">
+        <!-- <section id="main-s3">
             <div id="main-s3-boxing">
                 <div id="main-s3-x">▼</div>
                 <div id="main-s3-menus">
@@ -46,7 +46,7 @@
                     <div class="main-s3-menus" id="main-s3-m4">CHAT</div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- <section id="main-login">
             <div id="main-login-boxing">
                 <div id="main-login-x">▼
