--- a/index.html
+++ b/index.html
@@ -36,17 +36,21 @@
             </div>
         </section>
         <!--  -->
-        <!-- <section id="main-s3">
+        <section id="main-s3">
             <div id="main-s3-boxing">
-                <div id="main-s3-x">▼</div>
+                <!-- <div id="main-s3-x">▼</div> -->
                 <div id="main-s3-menus">
-                    <div class="main-s3-menus" id="main-s3-m1">RATE</div>
-                    <div class="main-s3-menus" id="main-s3-m2">CHECK LIST</div>
-                    <div class="main-s3-menus" id="main-s3-m3">DAIRY</div>
-                    <div class="main-s3-menus" id="main-s3-m4">CHAT</div>
+                    <section>
+                        <div class="main-s3-menus-items" id="main-s3-m1">RATE</div>
+                        <div class="main-s3-menus-items" id="main-s3-m2">CHECK<br>LIST</div>
+                    </section>
+                    <section>
+                        <div class="main-s3-menus-items" id="main-s3-m3">DAIRY</div>
+                        <div class="main-s3-menus-items" id="main-s3-m4">CHAT</div>
+                    </section>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- <section id="main-login">
             <div id="main-login-boxing">
                 <div id="main-login-x">▼
@@ -65,7 +69,7 @@
     </div>
 
 
-    <!-- <script src="/index.js"></script> -->
+    <!-- <script src="/indextime.js"></script> -->
     <script type="text/javascript">
         // const mArr = new Array('Jan','Feb','Mar','Apr','May','Jun','July','Aug','Sep','Oct','11','Dec');
 const mainDate = document.getElementById('main-s1-thistime-date');
