--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                 <!-- <div id="main-s3-x">▼</div> -->
                 <div id="main-s3-menus">
                     <section>
-                        <div class="main-s3-menus-items" id="main-s3-m1">RATE</div>
-                        <div class="main-s3-menus-items" id="main-s3-m2">CHECK<br>LIST</div>
+                        <div class="main-s3-menus-items" id="main-s3-dairy">DAIRY</div>
+                        <div class="main-s3-menus-items" id="main-s3-check">CHECK<br>LIST</div>
                     </section>
                     <section>
-                        <div class="main-s3-menus-items" id="main-s3-m3">DAIRY</div>
-                        <div class="main-s3-menus-items" id="main-s3-m4">CHAT</div>
+                        <div class="main-s3-menus-items" id="main-s3-rate">RATE</div>
+                        <div class="main-s3-menus-items" id="main-s3-chat">CHAT</div>
                     </section>
                 </div>
             </div>
