--- a/index.html
+++ b/index.html
@@ -42,30 +42,65 @@
                 <div id="main-s3-menus">
                     <section>
                         <div class="main-s3-menus-items" id="main-s3-dairy">DAIRY</div>
-                        <div class="main-s3-menus-items" id="main-s3-check">CHECK<br>LIST</div>
+                        <div class="main-s3-menus-items" id="main-s3-rate">RATE</div>
                     </section>
                     <section>
-                        <div class="main-s3-menus-items" id="main-s3-rate">RATE</div>
+                        <div class="main-s3-menus-items" id="main-s3-check">CHECK<br>LIST</div>
                         <div class="main-s3-menus-items" id="main-s3-chat">CHAT</div>
                     </section>
                 </div>
             </div>
         </section>
-        <!-- <section id="main-login">
-            <div id="main-login-boxing">
-                <div id="main-login-x">▼
-                    <p>choose travler</p>
-                </div>
-                <div id="main-login-menus">
-                    <div class="main-login-menus" id="main-login-1">김도혁</div>
-                    <div class="main-login-menus" id="main-login-2">한강익</div>
-                    <div class="main-login-menus" id="main-login-3">박정진</div>
-                    <div class="main-login-menus" id="main-login-4">김우섭</div>
-                    <div class="main-login-menus" id="main-login-4">백종훈</div>
-                </div>
+    </div>
+    <div id="rate">
+        <div class="rate-days" id="rate-day1">
+            <div class="rate-days-title">
+                day1
             </div>
-        </section> -->
-
+            <div class="rate-days-description">
+                <textarea name="" id="rate-day1" cols="30" rows="10"></textarea>
+            </div>
+        </div>
+        <div class="rate-days" id="rate-day2">
+            <div class="rate-days-title">
+                day2
+            </div>
+            <div class="rate-days-description">
+                <textarea name="" id="rate-day2" cols="30" rows="10"></textarea>
+            </div>
+        </div>
+        <div class="rate-days" id="rate-day3">
+            <div class="rate-days-title">
+                day3
+            </div>
+            <div class="rate-days-description">
+                <textarea name="" id="rate-day3" cols="30" rows="10"></textarea>
+            </div>
+        </div>
+        <div class="rate-days" id="rate-day4">
+            <div class="rate-days-title">
+                day4
+            </div>
+            <div class="rate-days-description">
+                <textarea name="" id="rate-day4" cols="30" rows="10"></textarea>
+            </div>
+        </div>
+        <div class="rate-days" id="rate-day5">
+            <div class="rate-days-title">
+                day5
+            </div>
+            <div class="rate-days-description">
+                <textarea name="" id="rate-day5" cols="30" rows="10"></textarea>
+            </div>
+        </div>
+        <div class="rate-days" id="rate-day6">
+            <div class="rate-days-title">
+                day6
+            </div>
+            <div class="rate-days-description">
+                <textarea name="" id="rate-day6" cols="30" rows="10"></textarea>
+            </div>
+        </div>
     </div>
 
 
