--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     </div>
 
 
-    <!-- <script src="/indextime.js"></script> -->
-    <script type="text/javascript">
+    <script src="/indextime.js"></script>
+    <!-- <script type="text/javascript">
         // const mArr = new Array('Jan','Feb','Mar','Apr','May','Jun','July','Aug','Sep','Oct','11','Dec');
 const mainDate = document.getElementById('main-s1-thistime-date');
 const mainDay = document.getElementById('main-s1-thistime-day');
@@ -131,6 +131,6 @@ function getThistime(){
     tt.innerText = `${h}:${m}`;
 };
 setInterval(getThistime, 1000);
-    </script>
+    </script> -->
 </body>
 </html>
