--- a/index.html
+++ b/index.html
@@ -102,9 +102,21 @@
             </div>
         </div>
     </div>
-
+    <div id="checklist">
+        <form id="checklist-form">
+            <div id="checklist-input-container">
+                <input type="text" id="checklist-input" placeholder="Create a new todo list..." required>
+                <i class="fas fa-arrow-down"id="btn-checklist-save"></i>
+            </div>
+        </form>
+    
+        <div id="print-view"></div>
+    </div>
 
     <script src="/indextime.js"></script>
+    <script src="/checklist/checklist.js"></script>
+    <script type="module" src="/firebase.js"></script>
+
     <!-- <script type="text/javascript">
         // const mArr = new Array('Jan','Feb','Mar','Apr','May','Jun','July','Aug','Sep','Oct','11','Dec');
 const mainDate = document.getElementById('main-s1-thistime-date');
