--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
             </div>
         </div>
     </div>
-    <div id="checklist">
-        <form id="checklist-form">
-            <div id="checklist-input-container">
-                <input type="text" id="checklist-input" placeholder="Create a new todo list..." required>
-                <i class="fas fa-arrow-down"id="btn-checklist-save"></i>
+    <div id="cl">
+        <form id="cl-form">
+            <div id="cl-input-container">
+                <input type="text" id="cl-input" placeholder="type here." required>
+                <i class="fas fa-arrow-down"id="btn-cl-save"></i>
             </div>
         </form>
     
