--- a/dairy/dairy.html
+++ b/dairy/dairy.html
@@ -5,30 +5,125 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Forum&Bodoni+Moda&Gowun+Dodum&family=Jua&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
-    <title>kota-dairy</title>
+    <link rel="stylesheet" href="./dairy.css">
+    <title>kota-d1</title>
 </head>
 <body>
-    <div class="dairy">
-        <section id="dairy-s1">
-            <div id="dairy-s1-header">
+    <div class="d">
+        <section class="d-s1" id="d1-s1">
+            <div class="d-header" id="d1-s1-header">
                 <p>DAY1</p>
             </div>
-            <div id="dairy-s1-nav">
-                <span id="dairy-s1-nav-date">EDIT</span>
-                <span id="dairy-s1-nav-time">SAVE</span>
+            <div class="d-nav"id="d1-s1-nav">
+                <span class="d-nav-edit" id="d1-edit">EDIT</span>
+                <span class="d-nav-save" id="d1-save">SAVE</span>
             </div>
         </section>
         <!--  -->
-        <section id="main-s2">
-            <div id="main-s2-boxing">
-                <div id="main-s2-dday">
-                    <span id="main-s2-dday-span">DAY1</span>
+        <section class="d-s2" id="d1-s2">
+            <div class="d-s2-boxing" id="d1-s2-boxing">
+                <div class="d-content" id="d-content">
+                    <span>(empty)</span>
                 </div>
-                <div id="main-s2-schadule">from firebase</div>
+            </div>
+        </section>
+    </div>
+
+    <div class="d">
+        <section class="d-s1" id="d1-s1">
+            <div class="d-header" id="d1-s1-header">
+                <p>DAY2</p>
+            </div>
+            <div class="d-nav"id="d1-s1-nav">
+                <span class="d-nav-edit" id="d1-edit">EDIT</span>
+                <span class="d-nav-save" id="d1-save">SAVE</span>
             </div>
         </section>
         <!--  -->
+        <section class="d-s2" id="d1-s2">
+            <div class="d-s2-boxing" id="d1-s2-boxing">
+                <div class="d-content" id="d-content">
+                    <span>(empty)</span>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="d">
+        <section class="d-s1" id="d1-s1">
+            <div class="d-header" id="d1-s1-header">
+                <p>DAY3</p>
+            </div>
+            <div class="d-nav"id="d1-s1-nav">
+                <span class="d-nav-edit" id="d1-edit">EDIT</span>
+                <span class="d-nav-save" id="d1-save">SAVE</span>
+            </div>
+        </section>
+        <!--  -->
+        <section class="d-s2" id="d1-s2">
+            <div class="d-s2-boxing" id="d1-s2-boxing">
+                <div class="d-content" id="d-content">
+                    <span>(empty)</span>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="d">
+        <section class="d-s1" id="d1-s1">
+            <div class="d-header" id="d1-s1-header">
+                <p>DAY4</p>
+            </div>
+            <div class="d-nav"id="d1-s1-nav">
+                <span class="d-nav-edit" id="d1-edit">EDIT</span>
+                <span class="d-nav-save" id="d1-save">SAVE</span>
+            </div>
+        </section>
+        <!--  -->
+        <section class="d-s2" id="d1-s2">
+            <div class="d-s2-boxing" id="d1-s2-boxing">
+                <div class="d-content" id="d-content">
+                    <span>(empty)</span>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="d">
+        <section class="d-s1" id="d1-s1">
+            <div class="d-header" id="d1-s1-header">
+                <p>DAY5</p>
+            </div>
+            <div class="d-nav"id="d1-s1-nav">
+                <span class="d-nav-edit" id="d1-edit">EDIT</span>
+                <span class="d-nav-save" id="d1-save">SAVE</span>
+            </div>
+        </section>
+        <!--  -->
+        <section class="d-s2" id="d1-s2">
+            <div class="d-s2-boxing" id="d1-s2-boxing">
+                <div class="d-content" id="d-content">
+                    <span>(empty)</span>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="d">
+        <section class="d-s1" id="d1-s1">
+            <div class="d-header" id="d1-s1-header">
+                <p>DAY6</p>
+            </div>
+            <div class="d-nav"id="d1-s1-nav">
+                <span class="d-nav-edit" id="d1-edit">EDIT</span>
+                <span class="d-nav-save" id="d1-save">SAVE</span>
+            </div>
+        </section>
+        <!--  -->
+        <section class="d-s2" id="d1-s2">
+            <div class="d-s2-boxing" id="d1-s2-boxing">
+                <div class="d-content" id="d-content">
+                    <span>(empty)</span>
+                </div>
+            </div>
+        </section>
+    </div>
 
 </body>
 </html>
