--- a/index.html
+++ b/index.html
@@ -41,69 +41,19 @@
                 <!-- <div id="main-s3-x">▼</div> -->
                 <div id="main-s3-menus">
                     <section>
-                        <div class="main-s3-menus-items" id="main-s3-dairy">DAIRY</div>
-                        <div class="main-s3-menus-items" id="main-s3-rate">RATE</div>
+                        <a href="/dairy/dairy.html" target="_self" class="main-s3-menus-items" id="main-s3-dairy">DAIRY</a>
+                        <a href="/rate/rate.html" target="_self"  class="main-s3-menus-items" id="main-s3-rate">RATE</a>
                     </section>
                     <section>
-                        <div class="main-s3-menus-items" id="main-s3-check">
+                        <a href="/checklist/checklist.html" target="_self" class="main-s3-menus-items" id="main-s3-check">
                             CHECK<br>LIST
-                        </div>
-                        <div class="main-s3-menus-items" id="main-s3-chat">CHAT</div>
+                        </a>
+                        <a href="/chat/chat.html" target="_self"  class="main-s3-menus-items" id="main-s3-chat">CHAT</a>
                     </section>
-                    <a href="/checklist/checklist.html" target="_self">/checklist/checklist.html</a>
+                    <label for=""></label>
                 </div>
             </div>
         </section>
-    </div>
-    <div id="rate">
-        <div class="rate-days" id="rate-day1">
-            <div class="rate-days-title">
-                day1
-            </div>
-            <div class="rate-days-description">
-                <textarea name="" id="rate-day1" cols="30" rows="10"></textarea>
-            </div>
-        </div>
-        <div class="rate-days" id="rate-day2">
-            <div class="rate-days-title">
-                day2
-            </div>
-            <div class="rate-days-description">
-                <textarea name="" id="rate-day2" cols="30" rows="10"></textarea>
-            </div>
-        </div>
-        <div class="rate-days" id="rate-day3">
-            <div class="rate-days-title">
-                day3
-            </div>
-            <div class="rate-days-description">
-                <textarea name="" id="rate-day3" cols="30" rows="10"></textarea>
-            </div>
-        </div>
-        <div class="rate-days" id="rate-day4">
-            <div class="rate-days-title">
-                day4
-            </div>
-            <div class="rate-days-description">
-                <textarea name="" id="rate-day4" cols="30" rows="10"></textarea>
-            </div>
-        </div>
-        <div class="rate-days" id="rate-day5">
-            <div class="rate-days-title">
-                day5
-            </div>
-            <div class="rate-days-description">
-                <textarea name="" id="rate-day5" cols="30" rows="10"></textarea>
-            </div>
-        </div>
-        <div class="rate-days" id="rate-day6">
-            <div class="rate-days-title">
-                day6
-            </div>
-            <div class="rate-days-description">
-                <textarea name="" id="rate-day6" cols="30" rows="10"></textarea>
-            </div>
-        </div>
     </div>
 </body>
 </html>
