--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="/rate/rate.html" target="_self"  class="main-s3-menus-items" id="main-s3-rate">RATE</a>
                     </section>
                     <section>
-                        <a href="/checklist/checklist.html" target="_self" class="main-s3-menus-items" id="main-s3-check">
+                        <a href="/checklist2/checklist2.html" target="_self" class="main-s3-menus-items" id="main-s3-check">
                             CHECK<br>LIST
                         </a>
                         <a href="/chat/chat.html" target="_self"  class="main-s3-menus-items" id="main-s3-chat">CHAT</a>
