--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <!--  -->
         <section id="main-s2">
             <div id="main-s2-boxing">
-                <div id="main-s2-dday">
+                <div id="main-s2-header">
                     <span id="main-s2-dday-span">DAY1</span>
                 </div>
-                <div id="main-s2-schadule">from firebase</div>
+                <div id="main-s2-schadule">- schadule area -</div>
+                <a id="main-s2-footer">전체 일정 보기</a>
             </div>
         </section>
         <!--  -->
@@ -45,7 +46,7 @@
                         <a href="/rate/rate.html" target="_self"  class="main-s3-menus-items" id="main-s3-rate">RATE</a>
                     </section>
                     <section>
-                        <a href="/checklist2/checklist2.html" target="_self" class="main-s3-menus-items" id="main-s3-check">
+                        <a href="/checklist/checklist.html" target="_self" class="main-s3-menus-items" id="main-s3-check">
                             CHECK<br>LIST
                         </a>
                         <a href="/chat/chat.html" target="_self"  class="main-s3-menus-items" id="main-s3-chat">CHAT</a>
