--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="main-s2">
             <div id="main-s2-boxing">
                 <div id="main-s2-header">
-                    <span id="main-s2-dday-span">DAY1</span>
+                    <span id="dday">DAY1</span>
                 </div>
                 <div id="main-s2-schadule">- schadule area -</div>
                 <a id="main-s2-footer">전체 일정 보기</a>
@@ -56,5 +56,6 @@
         </section>
     </div>
     <script src="/indextime.js"></script>
+    <script src="/indexdday.js"></script>
 </body>
 </html>
