--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
                 <div id="main-s2-header">
                     <span id="dday">DAY1</span>
                 </div>
-                <div id="main-s2-schadule">- schadule area -</div>
+                <div id="main-s2-schadule" class="dp-none">스케줄
+                </div>
+                <div id="name">
+                    <div id="name-header">Choose User Name</div>
+                    <div id="names">
+                        <div class="name" onclick="Name1()">김도혁</div>
+                        <div class="name" onclick="Name2()">한강익</div>
+                        <div class="name" onclick="Name3()">박정진</div>
+                        <div class="name" onclick="Name4()">김우섭</div>
+                        <div class="name" onclick="Name5()">백종훈</div>
+                    </div>
+                </div>
                 <a id="main-s2-footer">전체 일정 보기</a>
             </div>
         </section>
@@ -57,7 +68,8 @@
     </div>
     <script src="/indextime.js"></script>
     <script src="/indexdday.js"></script>
-    <script src="/app.js"></script>
+    <script src="/name.js"></script>
+    <!-- <script src="/app.js"></script> -->
     
 </body>
 </html>
