--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div id="main-s2-schadule" class="dp-none" >스케줄
                 </div>
                 <div id="name">
-                    <div id="name-header">Choose User Name</div>
+                    <div id="name-header">Choose traveler's<br>Name</div>
                     <div id="names">
                         <div class="name" onclick="Name1()">김도혁</div>
                         <div class="name" onclick="Name2()">한강익</div>
