--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 </div>
                 <div id="main-s2-schadule" class="dp-none" >스케줄
                 </div>
+                <a id="main-s2-footer" class="dp-none">전체 일정 보기</a>
                 <div id="name">
                     <div id="name-header">Choose traveler's<br>Name</div>
                     <div id="names">
@@ -44,7 +45,6 @@
                         <div class="name" onclick="Name5()">백종훈</div>
                     </div>
                 </div>
-                <a id="main-s2-footer">전체 일정 보기</a>
             </div>
         </section>
         <!--  -->
