--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <a id="main-s2-footer" class="dp-none">전체 일정 보기</a>
                 <div id="name">
-                    <div id="name-header">Choose traveler's<br>Name</div>
+                    <div id="name-header">Choose traveler's Name</div>
                     <div id="names">
                         <div class="name" onclick="Name1()">김도혁</div>
                         <div class="name" onclick="Name2()">한강익</div>
