--- a/chat/chat.html
+++ b/chat/chat.html
@@ -12,23 +12,16 @@
         <section class="chat">
             <div class="chats" id="chats">
                 <div id="single-chat">
-                    <div class="chat-name">도혁</div>
+                    <div class="chat-name">종훈</div>
                     <div>
-                        <span class="chat-text">다들 뭐하냐?</span>
+                        <span class="chat-text">ㅇㄷ?</span>
                         <span class="chat-time">00:00</span>
                     </div>
                 </div>
                 <div id="single-chat">
                     <div class="chat-name">도혁</div>
                     <div>
-                        <span class="chat-text">다들 뭐하냐?</span>
-                        <span class="chat-time">00:00</span>
-                    </div>
-                </div>
-                <div id="single-chat">
-                    <div class="chat-name">도혁</div>
-                    <div>
-                        <span class="chat-text">다들 뭐하냐?</span>
+                        <span class="chat-text">ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</span>
                         <span class="chat-time">00:00</span>
                     </div>
                 </div>
