--- a/chat/chat.html
+++ b/chat/chat.html
@@ -11,11 +11,11 @@
 <body>
         <section class="chat">
             <div class="chats" id="chats">
-                <div id="single-chat">
-                    <div class="chat-name">종훈</div>
+                <div class="single-chat" id="single-chat">
+                    <div class="chat-name" id="chat-name">종훈</div>
                     <div>
-                        <span class="chat-text">ㅇㄷ?</span>
-                        <span class="chat-time">00:00</span>
+                        <span class="chat-text" id="chat-text">ㅇㄷ?</span>
+                        <span class="chat-time" id="chat-time">00:00</span>
                     </div>
                 </div>
             </div>
