--- a/chat/chat.html
+++ b/chat/chat.html
@@ -11,13 +11,13 @@
 <body>
         <section class="chat">
             <div class="chats" id="chats">
-                <div class="single-chat" id="single-chat">
+                <!-- <div class="single-chat" id="single-chat">
                     <div class="chat-name" id="chat-name">종훈</div>
                     <div>
                         <span class="chat-text" id="chat-text">ㅇㄷ?</span>
                         <span class="chat-time" id="chat-time">00:00</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <section class="type">
@@ -26,6 +26,7 @@
             </form>
         </section>
 
+    <script src="./firebaseComfig.js"></script>
     <script src="./chat.js"></script>
 </body>
 </html>
