--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <script src="/indextime.js"></script>
     <script src="/indexdday.js"></script>
     <script src="/name.js"></script>
-    <!-- <script src="/app.js"></script> -->
-    
+
+    <script src="/app.js"></script>    
 </body>
 </html>
