--- a/rate/rate.html
+++ b/rate/rate.html
@@ -6,9 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Forum&Bodoni+Moda&Gowun+Dodum&family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="rate.css">
-    <title>kota rate</title>
+    <title>kota</title>
 </head>
 <body>
-    
+    <div class="main">
+        <header id="header">
+            <div id="title">
+                <p>HOW WAS</p>
+                <p>TODAY?</p>
+            </div>
+        </header>
+        <!--  -->
+        <section class="rate-boxes-container">
+            <article class="rate-box">
+                <div class="rate-header">
+                    <span id="dday">DAY1</span>
+                </div>
+                <div class="rate-printview">
+                </div>
+                <section class="type">
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                    </form>
+                </section>
+            </article>
+            <article class="rate-box">
+                <div class="rate-header">
+                    <span id="dday">DAY2</span>
+                </div>
+                <div class="rate-printview">
+                </div>
+                <section class="type">
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                    </form>
+                </section>
+            </article>
+            <article class="rate-box">
+                <div class="rate-header">
+                    <span id="dday">DAY3</span>
+                </div>
+                <div class="rate-printview">
+                </div>
+                <section class="type">
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                    </form>
+                </section>
+            </article>
+            <article class="rate-box">
+                <div class="rate-header">
+                    <span id="dday">DAY4</span>
+                </div>
+                <div class="rate-printview">
+                </div>
+                <section class="type">
+                    <form id="type-form">
+                        <input id="type-input" type="text" placeholder="type here..." required>
+                    </form>
+                </section>
+            </article>
+        </section>
+    </div>
 </body>
 </html>
