--- a/rate/rate.html
+++ b/rate/rate.html
@@ -17,6 +17,13 @@
             </div>
         </header>
         <!--  -->
+        <script type="text/javascript">
+            const rateHeader = document.querySelector('.rate-header');
+
+            rateHeader.addEventListener('click',() =>{
+                
+            })
+        </script>
         <section class="rate-boxes-container">
             <article class="rate-box">
                 <div class="rate-header">
